--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.12.2",
     "morgan": "^1.9.1",
+    "node-cron": "^3.0.0",
     "node-telegram-bot-api": "^0.51.0",
     "nodemon": "^2.0.7",
     "pm2": "^4.5.5",
