--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "cross-env DEBUG=nodeapi:* NODE_ENV=development nodemon"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.16",
     "axios": "^0.21.1",
     "connect-mongo": "^4.4.0",
     "cookie-parser": "^1.4.5",
