--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.6",
     "express": "^4.16.4",
     "express-validator": "^6.10.0",
+    "google-distance-matrix": "^1.1.1",
     "http-error": "0.0.6",
     "http-errors": "^1.6.3",
     "jade": "~1.11.0",
