Update dependencies to latest

--- a/package.json
+++ b/package.json
@@ -4,30 +4,31 @@
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./bin/www",
-    "dev": "cross-env DEBUG=nodeapi:* NODE_ENV=development nodemon"
+    "dev": "cross-env DEBUG=nodeapi:* NODE_ENV=development nodemon",
+    "initdb": "node scripts/initDatabase.js"
   },
   "dependencies": {
-    "@googlemaps/google-maps-services-js": "^3.1.16",
-    "axios": "^0.21.1",
-    "connect-mongo": "^4.4.0",
-    "cookie-parser": "^1.4.5",
-    "cote": "^1.0.2",
-    "cross-env": "^7.0.3",
-    "debug": "^2.6.9",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
-    "express": "^4.16.4",
-    "express-validator": "^6.10.0",
-    "google-distance-matrix": "^1.1.1",
-    "http-error": "0.0.6",
-    "http-errors": "^1.6.3",
-    "jade": "~1.11.0",
-    "mongoose": "^5.12.2",
-    "morgan": "^1.9.1",
-    "node-cron": "^3.0.0",
-    "node-telegram-bot-api": "^0.51.0",
-    "nodemon": "^2.0.7",
-    "pm2": "^4.5.5",
-    "socks5-https-client": "^1.2.1"
+    "@googlemaps/google-maps-services-js": "latest",
+    "axios": "latest",
+    "connect-mongo": "latest",
+    "cookie-parser": "latest",
+    "cote": "latest",
+    "cross-env": "latest",
+    "debug": "latest",
+    "dotenv": "latest",
+    "ejs": "latest",
+    "express": "latest",
+    "express-validator": "latest",
+    "google-distance-matrix": "latest",
+    "http-error": "latest",
+    "http-errors": "latest",
+    "jade": "latest",
+    "mongoose": "latest",
+    "morgan": "latest",
+    "node-cron": "latest",
+    "node-telegram-bot-api": "latest",
+    "nodemon": "latest",
+    "pm2": "latest",
+    "socks5-https-client": "latest"
   }
 }
