--- a/package.json
+++ b/package.json
@@ -8,26 +8,26 @@
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.1.16",
-    "axios": "^0.21.1",
-    "connect-mongo": "^4.4.0",
+    "axios": "^1.13.4",
+    "connect-mongo": "^6.0.0",
     "cookie-parser": "^1.4.5",
-    "cote": "^1.0.2",
+    "cote": "^1.2.0",
     "cross-env": "^7.0.3",
     "debug": "^2.6.9",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
-    "express": "^4.16.4",
-    "express-validator": "^6.10.0",
+    "dotenv": "^17.2.4",
+    "ejs": "^4.0.1",
+    "express": "^5.2.1",
+    "express-validator": "^7.3.1",
+    "fast-xml-parser": "^5.3.4",
     "google-distance-matrix": "^1.1.1",
-    "http-error": "0.0.6",
-    "http-errors": "^1.6.3",
-    "jade": "~1.11.0",
-    "mongoose": "^5.12.2",
+    "http-errors": "^2.0.1",
+    "mongoose": "^9.1.6",
     "morgan": "^1.9.1",
     "node-cron": "^3.0.0",
-    "node-telegram-bot-api": "^0.51.0",
-    "nodemon": "^2.0.7",
-    "pm2": "^4.5.5",
+    "node-telegram-bot-api": "^0.67.0",
+    "nodemon": "^3.1.11",
+    "pm2": "^6.0.14",
+    "pug": "^3.0.3",
     "socks5-https-client": "^1.2.1"
   }
 }
