--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.1.16",
-    "axios": "^1.13.4",
+    "@supabase/supabase-js": "^2.95.3",
+    "axios": "^1.13.5",
     "connect-mongo": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "cote": "^1.2.0",
