--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,58 @@
-node_modules
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.DS_Store
+
+# Android
+.gradle/
+build/
+captures/
+.externalNativeBuild/
+.cxx/
+local.properties
+*.iml
+.idea/
+*.keystore
+!debug.keystore
+keystore.properties
+
+# Android specific (inside folders)
+android-native/**/.gradle/
+android-native/**/build/
+android-native/**/local.properties
+android-native/**/.idea/
+android-native/**/*.iml
+
+# iOS / macOS
+.DS_Store
+ios-native/build/
+ios-native/DerivedData/
+ios-native/*.pbxuser
+ios-native/xcuserdata/
+ios-native/*.xcuserstate
+ios-native/*.xcworkspace
+!ios-native/*.xcodeproj/project.xcworkspace/
+ios-native/.build/
+ios-native/Pods/
+ios-native/fastlane/report.xml
+ios-native/fastlane/screenshots/**/*.png
+ios-native/*.ipa
+
+# Expo
+mobile/.expo/
+mobile/node_modules/
+mobile/npm-debug.log*
+mobile/yarn-debug.log*
+mobile/yarn-error.log*
+
+# Misc
+*.swp
+*~
+.vscode/
