--- a/android-native/app/src/main/AndroidManifest.xml
+++ b/android-native/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".StitchGasFinderActivity"
+            android:exported="false"
+            android:label="UI Minimalista" />
     </application>
 
 </manifest>
